# steelflow

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  agents.md  observability.md  quickstart.md  rag_recipes.md
examples/: agents_basic.py  rag_basic.py
src/steelflow/: __init__.py  cli.py  config.py  contracts.py
src/steelflow/agents/: __init__.py  base.py  pipeline.py
src/steelflow/engine/: __init__.py  base.py  orchestration.py  registry.py  runtime.py
src/steelflow/engine/backends/: __init__.py  base.py  exllama_v2.py  llama_cpp.py  ollama.py  transformers.py  vllm_backend.py
src/steelflow/observability/: __init__.py  base.py  core.py  noop.py
src/steelflow/plugins/: __init__.py  base.py  discovery.py  registry.py
src/steelflow/rag/: __init__.py  base.py  hybrid.py  index.py  models.py  pipeline.py
src/steelflow/storage/: __init__.py  base.py
src/steelflow/strategy/: __init__.py  base.py
tests/: test_engine_orchestration.py  test_engine_runtime.py  test_rag_hybrid.py  test_rag_pipeline.py  test_smoke.py
